# JennySeaStalkd

./: CMakeCache.txt  CMakeLists.txt  README.md
.github/workflows/: build.yml
debian/: depends.sh
src/: beanstar_server.cpp  test_beanstar.cpp  test_hellokitty.cpp
